# MicroScript

./: .gitignore  CMakeLists.txt  LICENSE  MicroScript.cpp  MicroScript.sln  MicroScript.vcxproj  MicroScript.vcxproj.filters  readme.txt  stdafx.cpp  stdafx.h  targetver.h
Engine/: ArgumentsParser.cpp  ArgumentsParser.h  Function.hpp  ParserBase.hpp  Registrator.cpp  Registrator.h  ScriptParser.cpp  ScriptParser.h  hresult.hpp  parseArgument.cpp  parseArgument.h  parseArgument.hpp  utils.hpp
